--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -2,6 +2,9 @@
 
 {% block title %}Dashboard - Techtonic{% endblock %}
 
+{% block header_title %}Dashboard{% endblock %}
+{% block header_description %}Your central hub for tracking progress, updates, and activities.{% endblock %}
+
 {% block content %}
 <div class="dashboard-welcome">
     <h1>Welcome!!, {{ user.username }}!</h1>
