--- a/assessments/templates/assessments/view_analysis.html
+++ b/assessments/templates/assessments/view_analysis.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interview Analysis</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'assessments/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'assessments/css/view_analysis.css' %}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
